--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ main, footer {
 	margin: 0 auto;
 }
 
-main div, .div {
+main div, footer div, .div {
 	width: 700px;	/*размер блока*/
 	margin: 0 auto;	/*настраивает блок по центру*/
 	padding: 50px 0 0;
