--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: Pompadur;/*'nameFont'*/
-	src:  url('files/Comfortaa-VariableFont_wght.ttf');/*'files/nameFont'*/
+	src:  url('Neucha-Regular.ttf');/*'files/nameFont'*/
 }
 
 body {
